--- a/index.html
+++ b/index.html
@@ -9,25 +9,40 @@
   <title>Four card feature section</title>
 
 </head>
+
+
 <body>
+
+  <header>
+    <p>Reliable, efficient delivery</p>
+    <p>Powered by Technology</p> 
+    <p>Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
+  </header>
   
-  Reliable, efficient delivery
-  Powered by Technology
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
+  <main>
+    <div>Supervisor
+         Monitors activity to identify project roadblocks
+    </div>
+    
+    <div>
+    <div>
+      Team Builder
+      Scans our talent network to create the optimal team for your project
+    </div>
+    <div>
+      Karma
+      Regularly evaluates our talent to ensure quality
+    </div>
+    </div>
+  
+    <div>Calculator
+         Uses data from past projects to provide better delivery estimates
+    </div>
+  
+  </main>
 
-  Supervisor
-  Monitors activity to identify project roadblocks
-
-  Team Builder
-  Scans our talent network to create the optimal team for your project
-
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
+  
 
   
   <footer>
@@ -36,5 +51,6 @@
       Coded by <a href="#">Your Name Here</a>.
     </p>
   </footer>
+
 </body>
 </html>
