added p, h1,h2 in index file

--- a/index.html
+++ b/index.html
@@ -14,30 +14,35 @@
 <body>
 
   <header>
-    <p>Reliable, efficient delivery</p>
-    <p>Powered by Technology</p> 
+    <h1>
+      <br>Reliable, efficient delivery 
+      <br>Powered by Technology
+    </h1>
     <p>Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
   </header>
   
 
   <main>
-    <div>Supervisor
-         Monitors activity to identify project roadblocks
+
+    <div>
+      <h2>Supervisor</h2>
+      <p>Monitors activity to identify project roadblocks</p>
     </div>
     
     <div>
     <div>
-      Team Builder
-      Scans our talent network to create the optimal team for your project
+      <h2>Team Builder</h2>
+      <p>Scans our talent network to create the optimal team for your project</p>
     </div>
     <div>
-      Karma
-      Regularly evaluates our talent to ensure quality
+      <h2>Karma</h2>
+      <p>Regularly evaluates our talent to ensure quality</p>
     </div>
     </div>
   
-    <div>Calculator
-         Uses data from past projects to provide better delivery estimates
+    <div>
+      <h2>Calculator</h2>
+      <p>Uses data from past projects to provide better delivery estimates</p>
     </div>
   
   </main>
