added br tag in index file

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
       <br>Reliable, efficient delivery 
       <br>Powered by Technology
     </h1>
-    <p>Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
+    <p>
+      <br>Our Artificial Intelligence powered tools use millions of project data 
+      <br>points to ensure that your project is successful
+    </p>
   </header>
   
 
@@ -27,23 +30,35 @@
 
     <div>
       <h2>Supervisor</h2>
-      <p>Monitors activity to identify project roadblocks</p>
+      <p>
+        <br>Monitors activity to identify project 
+        <br>roadblocks
+      </p>
     </div>
     
     <div>
     <div>
       <h2>Team Builder</h2>
-      <p>Scans our talent network to create the optimal team for your project</p>
+      <p>
+        <br>Scans our talent network to create the 
+        <br>optimal team for your project
+      </p>
     </div>
     <div>
       <h2>Karma</h2>
-      <p>Regularly evaluates our talent to ensure quality</p>
+      <p>
+        <br>Regularly evaluates our talent to ensure 
+        <br>quality
+      </p>
     </div>
     </div>
   
     <div>
       <h2>Calculator</h2>
-      <p>Uses data from past projects to provide better delivery estimates</p>
+      <p>
+        <br>Uses data from past projects to provide better
+        <br> delivery estimates
+      </p>
     </div>
   
   </main>
