--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <br>Monitors activity to identify project 
         <br>roadblocks
       </p>
+      <img src="images/icon-supervisor.svg">
       </div>
     </div>
     
@@ -50,6 +51,7 @@
         <br>Scans our talent network to create the 
         <br>optimal team for your project
       </p>
+      <img src="images/icon-team-builder.svg">
     </div>
     <div class="card-preview-3">
       <h2>Karma</h2>
@@ -57,6 +59,7 @@
         <br>Regularly evaluates our talent to ensure 
         <br>quality
       </p>
+      <img src="images/icon-karma.svg">
     </div>
     </div>
 
@@ -67,6 +70,7 @@
         <br>Uses data from past projects to provide better
         <br> delivery estimates
       </p>
+      <img src="images/icon-calculator.svg">
       </div>
     </div>
     
